ChangeLog for 2.53.1

//Beta 16
ZScript Dialogue: Import is now Load (hotkey 'L'), to match 2.55. 
	( ZoriaRPG, 25th November, 2019 )

//Beta 15
Display colour in tile editor as hex.
	( Venrob, 24th November, 2019 )

//Beta 14
Changed menu entry 'The Travels of Link' to 'Ambient Music'.
Fixed ambient and boss sounds being killed when using potions.
	The prior fix did not work. 
Fix Memory Leak from Mirrors: This commit should remove a memory leak when 
	reflecting weapons off of mirrors caused by creating a new weapon, 
	then not using it. 
	Notably: 
		weapon *w = new weapon(*this);
		if ( a ) { Lwpns.add(w); } // Safe, because the sprite_list will destroy it.
		else w = this; 
		// Memory leak happens here, because the weapon we added to the heap above
		// isn't added to sprite_list. It is a dangling piece on the heap.

	Changed to: 
		weapon *w = NULL; 
		if ( a )
		{
			w = new weapon(*this);
			Lwpns.add(w); 		// This should have the same effect as above, but
					// the weapon is not being allocated to the heap,
					// UNTIL it is NEEDED.
		}
		else w = this; // Now, we assign the NULL pointer to *this. 
		// Thus, no heap allocation occurs. 
Fix: Potion Kills Ambient SFX
	This fix should pause sfx when refilling (potion, magic, hearts
	or both, including from refill combos; then resume them when the potion 
	effect ends, matching the NES behaviour. 
	( ZoriaRPG, 20th November, 2019 )
	
Added zc.cfg section [ZSCRIPT] with config int ZASM_Hangcount.
	This is used in place of the hardcoded number of instructions to
	wait, ere checking quit keys. It defaults to 1000.
Check for hangs every 1000 ZScript instructions, instead of 100,000.
	( ZoriaRPG, 19th November, 2019 )

//Beta 13
Added Strings Help to the Help submenu.
Changed 'ZQuest Editor Help' to 'Editor Help'.
Edited the item help info for shields to reference ZQ Shield Help
	instead of the ZC.com Wiki.
Changed 'Shield Block Flags' in the Help submenu to 'Shield Help'.